fixing displayin test user when test mode is disabled

--- a/activities/Pages/Search.razor
+++ b/activities/Pages/Search.razor
@@ -290,7 +290,8 @@
                 PageSize = 10,
                 Approval = -1,// set this to 1 and it will display only approved users ( -1 : all users)
                 Member = -1,
-                Available = -1
+                Available = -1,
+                testUser=-1
             };
         SelectedCountry = null;
         SelectedLanguage = null;
