--- a/activities/Pages/ManageProfile.razor
+++ b/activities/Pages/ManageProfile.razor
@@ -63,7 +63,7 @@
                                     <p class="text-center text-success">@EditMessageSuccess</p>
                                     <p class="text-center text-danger">@EditMessageError</p>
 
-                                    <MudButton ButtonType="ButtonType.Submit" StartIcon="@Icons.Material.Filled.Search" Variant="Variant.Filled" Color="Color.Primary">Update informations</MudButton>
+                                    <MudButton ButtonType="ButtonType.Submit" StartIcon="@Icons.Material.Filled.Search" Variant="Variant.Filled" Color="Color.Primary">Save</MudButton>
 
                                 </div>
 
