update success message

--- a/activities/Pages/ManageProfile.razor
+++ b/activities/Pages/ManageProfile.razor
@@ -175,7 +175,7 @@
         {
             loadingSubmit = true;
             await _profileService.UserEdit(SearchedProfile.UserId, SearchedProfile);
-            EditMessageSuccess = "Informations has beed updated successfully";
+            EditMessageSuccess = "Profile has beed updated successfully";
         }
         catch
         {
